# MutwarekaziJosiane_Tfe_ApplicationWeb_2026

./: .gitignore  README.md  index.py  start-mailpit.bat  start.ps1
.github/workflows/: ci.yml
app/routers/: auth.py
backend/: .env.example  database.db  pyproject.toml  requirements.txt  run.py  test_face_recognition.py
backend/app/: bootstrap.py  config.py  database.py  exceptions.py  main.py
backend/app/face_recognition/: engine.py
backend/app/models/: __init__.py  administrateur.py  demande_inscription.py  donnee_faciale.py  log_acces.py  notification.py  reservation.py  salle.py  statuts.py  utilisateur.py
backend/app/routers/: access.py  admin.py  auth.py  face_detection.py  notification.py  reservation.py
backend/app/schemas/: user.py
backend/app/security/: biometric_cipher.py  dependencies.py  jwt.py  password.py
backend/app/utils/: dates.py  email_service.py
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_email_service.py  test_face_detection.py  test_password.py  test_reservation.py
frontend/: README.md  package-lock.json  package.json
frontend/scripts/: check-node.mjs
frontend/src/: App.css  App.jsx  index.css
frontend/src/__tests__/: userDashboardUtils.test.js
frontend/src/api/: api.js
frontend/src/components/: AdminLoginForm.jsx  AdminReviewPanel.jsx  CameraCapture.jsx  DashboardModal.jsx  RegisterForm.jsx  UserDashboard.jsx  UserLoginForm.jsx
frontend/src/pages/: Admin.jsx  Register.jsx  User.jsx
